--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -37,10 +37,10 @@
 
     <TextView
         android:id="@+id/TxtLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_width="181dp"
+        android:layout_height="35dp"
         android:layout_marginTop="53dp"
-        android:layout_marginEnd="116dp"
+        android:layout_marginEnd="64dp"
         android:fontFamily="casual"
         android:text="@string/project_name"
         android:textAlignment="gravity"
