--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:layout_marginStart="168dp"
         android:layout_marginTop="80dp"
         android:background="@android:color/black"
+        android:onClick="gotoEntry"
         android:text="@string/project_entry"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ImgRestaurant" />
@@ -61,6 +62,7 @@
         android:layout_marginStart="168dp"
         android:layout_marginTop="37dp"
         android:background="@android:color/black"
+        android:onClick="gotoMain"
         android:text="@string/project_main"
         app:layout_constraintBottom_toTopOf="@+id/divider2"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +77,7 @@
         android:layout_marginStart="168dp"
         android:layout_marginTop="32dp"
         android:background="@android:color/black"
+        android:onClick="gotoDesserts"
         android:text="@string/project_dessert"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/divider2" />
