--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -39,23 +39,37 @@
         android:id="@+id/TxtLogo"
         android:layout_width="181dp"
         android:layout_height="35dp"
-        android:layout_marginTop="53dp"
-        android:layout_marginEnd="64dp"
         android:fontFamily="casual"
         android:text="@string/project_name"
         android:textAlignment="gravity"
         android:textColor="#455A64"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toStartOf="@+id/ImgLogo"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/TxtDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="casual"
         android:text="TextView"
+        android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/divider4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvMenu"
+        android:layout_width="346dp"
+        android:layout_height="468dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider4"
+        app:layout_constraintVertical_bias="0.479" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
