--- a/app/src/main/res/layout/activity_dish.xml
+++ b/app/src/main/res/layout/activity_dish.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toBottomOf="@+id/dvdOne" />
 
     <ImageView
-        android:id="@+id/imgLogo"
+        android:id="@+id/imgCart"
         android:layout_width="70dp"
         android:layout_height="71dp"
         android:layout_marginEnd="8dp"
