--- a/app/src/main/res/layout/activity_dish.xml
+++ b/app/src/main/res/layout/activity_dish.xml
@@ -20,13 +20,14 @@
 
     <ImageView
         android:id="@+id/imgCart"
-        android:layout_width="70dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="45dp"
+        android:layout_height="44dp"
+        android:layout_marginEnd="24dp"
         android:contentDescription="@string/project_name"
         app:layout_constraintBottom_toTopOf="@+id/dvdOne"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.421"
         app:srcCompat="@drawable/basket" />
 
     <Button
@@ -40,7 +41,7 @@
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold|italic"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,13 +49,12 @@
         android:id="@+id/txtDishName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="48dp"
         android:fontFamily="casual"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/dvdOne"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imgCart"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
@@ -139,7 +139,8 @@
         app:layout_constraintTop_toBottomOf="@+id/txtIngredients"
         tools:text="1" />
 
-    <ImageButton
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/imgbtnPlus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -148,19 +149,22 @@
         app:layout_constraintEnd_toStartOf="@+id/etnQuantity"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtIngredients"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@drawable/ic_baseline_exposure_plus_1_24"
+        app:fabSize="mini"/>
 
-    <ImageButton
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/imgbtnMinus"
-        android:layout_width="54dp"
-        android:layout_height="51dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/dvdTwo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.522"
         app:layout_constraintStart_toEndOf="@+id/etnQuantity"
         app:layout_constraintTop_toBottomOf="@+id/txtIngredients"
         app:layout_constraintVertical_bias="0.497"
-        app:srcCompat="@android:drawable/presence_busy" />
+        app:srcCompat="@drawable/ic_baseline_exposure_neg_1_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
