--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
     <item
         android:id="@+id/itemBasket"
         android:title="Basket"
-        android:icon="@drawable/basket"
+        app:actionLayout="@layout/menu_items"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/itemAbout"
+        android:title="Basket"
+        android:icon="@drawable/ic_baseline_question"
         app:showAsAction="always"/>
 </menu>
